# tamos

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: publish-sky.yml
client/: README.md  pyproject.toml
client/src/: builder.py  config.py  main.py  submitter.py  validator.py
client/src/docs/: architecture.md
client/tests/: test_cli.py
constellations/TAMOS/: 3.json  5.json
dev-notes/: NewSpec.md  README.md  audit.md  folders.md  gates.md  glossary.md  naming.md  protocol_topview.dot  tech_stack.md  tests_plan.md  usage_topview.dot
dev-notes/_drafts/: Spec2.md
dev-notes/docs/: how.md
docs/: architecture.md  gates.md  glossary.md  how.md  what.md  who.md  why.md
example/: tamos.json
examples/: README.md  gem_example.json
protocol/: NewSpec.md  README.md  SPEC.md  Spec3.md  archive.md  gem.schema.json  gem.stored.schema.json  gem.submit.schema.json  glossary.md  protocol.md
protocol/examples/: constellation.example.json  entry.stored.schema.json  gem.example.json  minimal_submit_example.json
reference/archieve/: 1.json  2.json
reference/constellation/: 2.json
server/: .env.example  README.md  pyproject.toml
server/src/: cli.py  main.py
server/src/docs/: api.md  architecture.md
server/src/routes/: archive.py  submit.py
server/src/storage/: id_allocator.py  reader.py  writer.py
server/src/validation/: gem_validator.py
server/tests/: conftest.py  test_archive.py  test_health.py  test_submit.py
sky/: 1.json  4.json
