[project.optional-dependencies]
dev = [
    "pytest"
    ,"requests-mock"
    ,"pip-licenses"
]

[project]
name = "tamos-client"
version = "0.1.0"
description = "CLI client for TAMOS-2x2 protocol"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.26.0",
]

[project.scripts]
tamos = "main:main"

[tool.uv]
package = true
