[project]
name = "tamos-server"
version = "0.1.0"
description = "Server implementation for TAMOS-2x2 protocol"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest"
    ,"httpx"
    ,"python-dotenv"
    ,"pip-licenses"
]

[project.scripts]
tamos-server = "cli:main"
